syntax = "proto3";

package userpb;

option go_package = "proto/userpb";

// import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

// ==== Messages ====

message User {
  string id = 1;
  string name = 2;
  string email = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

message AuthResponse {
  string token = 1;
  User user = 2;
}

message CreateUserInput {
  string name = 1;
  string email = 2;
  string password = 3;
}

message LoginInput {
  string email = 1;
  string password = 2;
}

message UpdateUserInput {
  string name = 1;
  string email = 2;
  string password = 3;
}

message UserIdRequest {
  string id = 1;
}

// ==== Services ====

service UserService {
  // Query
  rpc GetUser(UserIdRequest) returns (User);

  // Mutations
  rpc Register(CreateUserInput) returns (AuthResponse);
  rpc Login(LoginInput) returns (AuthResponse);
  rpc UpdateUser(UpdateUserRequest) returns (User);
  rpc DeleteUser(UserIdRequest) returns (DeleteUserResponse);
}

// ==== Helper Messages ====

message UpdateUserRequest {
  string id = 1;
  UpdateUserInput input = 2;
}

message DeleteUserResponse {
  bool success = 1;
}
